# hotel

./: .gitignore  Dockerfile  README.md
backend/: .gitignore  Cargo.toml  README.md  Rocket.toml
backend/db/sqlx/data/: sample-data.sql
backend/db/sqlx/migrations/: 001_create-hotels-table.sql  002_create-room-types.table.sql  002_create-rooms.table.sql  003_create-guests-table.sql  003_create-rooms-table.sql  004_create-guests-table.sql  004_insert-sample-data.sql  005_create-bookings-table.sql  006_create-guests-bookings-table.sql  007_insert_sample.sql
backend/mail_templates/: booking.html
backend/src/: lib.rs  mailer.rs  main.rs  model.rs  sqlx.rs
backend/src/api/: mod.rs  response.rs
backend/src/api/handler/: hotel.rs  mod.rs
backend/static/: index.html
docker/backend/database/: docker-compose.yml
frontend/: README.md  docker-compose.yml  local.env
frontend/app/: package-lock.json  package.json  vue.config.js
frontend/app/src/: App.vue
frontend/app/src/components/: BaseLogo.vue  BaseSpinner.vue  BaseView.vue  TheFooter.vue  TheHeader.vue  TheNavigationBar.vue
frontend/app/src/components/roomBooking/: GuestDataForm.vue  GuestDataFormList.vue  TimeRangeOverview.vue
frontend/app/src/components/roomSearch/: DateRangePicker.vue  FilterList.vue  (+4 more)
frontend/app/src/helpers/: requestHelper.js
frontend/app/src/router/: index.js
frontend/app/src/store/: booking.js  hotel.js  index.js  roomType.js
frontend/app/src/views/: BookingSuccessPage.vue  NotFoundPage.vue  RoomBookPage.vue  RoomSearchPage.vue  WelcomePage.vue
frontend/docker/: Dockerfile
(+1 files in other folders)
