[package]
name = "hotel"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
uuid = { version = "1.3.1", features = ["v4"] }
scylla = "0.8.1"
